pydx/scalar/_mpfi.h

int   mpfi_init        (mpfi_ptr);
int   mpfi_clear        (mpfi_ptr);
int   mpfi_init_set        (mpfi_ptr, mpfi_srcptr);
int   mpfi_init_set_fr   (mpfi_ptr, mpfr_srcptr);
int mpfi_cosh (mpfi_ptr, mpfi_srcptr);
int mpfi_sinh (mpfi_ptr, mpfi_srcptr);
int mpfi_tanh (mpfi_ptr, mpfi_srcptr);
int mpfi_acosh (mpfi_ptr, mpfi_srcptr);
int mpfi_asinh (mpfi_ptr, mpfi_srcptr);
int mpfi_atanh (mpfi_ptr, mpfi_srcptr);
int mpfi_log1p (mpfi_ptr, mpfi_srcptr);
int mpfi_expm1 (mpfi_ptr, mpfi_srcptr);
int mpfi_log2 (mpfi_ptr, mpfi_srcptr);
int mpfi_log10 (mpfi_ptr, mpfi_srcptr);
int    mpfi_is_pos_default          (mpfi_srcptr);
int    mpfi_is_nonneg_default       (mpfi_srcptr);
int    mpfi_is_neg_default          (mpfi_srcptr);
int    mpfi_is_nonpos_default       (mpfi_srcptr);
int    mpfi_is_zero_default         (mpfi_srcptr);
int    mpfi_is_strictly_neg_default (mpfi_srcptr a);
int    mpfi_is_strictly_pos_default (mpfi_srcptr a);
int    mpfi_cmp_default      (mpfi_srcptr,mpfi_srcptr);
int    mpfi_cmp_fr_default (mpfi_srcptr,mpfr_srcptr);
int mpfi_has_zero (mpfi_srcptr);
int mpfi_nan_p (mpfi_srcptr);
int mpfi_inf_p (mpfi_srcptr);
int mpfi_bounded_p (mpfi_srcptr);
int   mpfi_get_left   (mpfr_ptr,mpfi_srcptr);
int   mpfi_get_right  (mpfr_ptr,mpfi_srcptr);
int   mpfi_put        (mpfi_ptr,mpfi_srcptr);
int   mpfi_put_fr     (mpfi_ptr,mpfr_srcptr);
int   mpfi_interv_fr  (mpfi_ptr,mpfr_srcptr,mpfr_srcptr);
int   mpfi_is_strictly_inside   (mpfi_srcptr,mpfi_srcptr);
int   mpfi_is_inside        	(mpfi_srcptr, mpfi_srcptr);
int   mpfi_is_inside_fr   	(mpfr_srcptr,mpfi_srcptr);
int   mpfi_is_empty         (mpfi_srcptr);
int   mpfi_intersect        (mpfi_ptr, mpfi_srcptr, mpfi_srcptr);
int   mpfi_union            (mpfi_ptr, mpfi_srcptr, mpfi_srcptr);
int  mpfi_increase         (mpfi_ptr,mpfr_srcptr);
int mpfi_bisect(mpfi_ptr, mpfi_ptr, mpfi_srcptr);