pydx/scalar/mpfi.pyx

    
    int mpfi_cosh (mpfi_ptr, mpfi_srcptr)
    int mpfi_sinh (mpfi_ptr, mpfi_srcptr)
    int mpfi_tanh (mpfi_ptr, mpfi_srcptr)
    int mpfi_acosh (mpfi_ptr, mpfi_srcptr)
    int mpfi_asinh (mpfi_ptr, mpfi_srcptr)
    int mpfi_atanh (mpfi_ptr, mpfi_srcptr)
    
    int mpfi_log1p (mpfi_ptr, mpfi_srcptr)
    int mpfi_expm1 (mpfi_ptr, mpfi_srcptr)
    
    int mpfi_log2 (mpfi_ptr, mpfi_srcptr)
    int mpfi_log10 (mpfi_ptr, mpfi_srcptr)
    
    int mpfi_const_log2(mpfi_ptr)
    int mpfi_const_pi(mpfi_ptr)
    int mpfi_const_euler(mpfi_ptr)
    
    # Comparison functions                                     
    # Warning: the meaning of interval comparison is not clearly defined 
    # customizable comparison functions 
    
    int    (*mpfi_cmp)     (mpfi_srcptr,mpfi_srcptr)
    int    (*mpfi_cmp_d)   (mpfi_srcptr,double)
    int    (*mpfi_cmp_ui)  (mpfi_srcptr,unsigned long)
    int    (*mpfi_cmp_si)  (mpfi_srcptr,long)
    int    (*mpfi_cmp_z)   (mpfi_srcptr,mpz_srcptr)
    int    (*mpfi_cmp_q)   (mpfi_srcptr,mpq_srcptr)
    int    (*mpfi_cmp_fr)(mpfi_srcptr,mpfr_srcptr)
    
    int    (*mpfi_is_pos)     (mpfi_srcptr)
    int    (*mpfi_is_nonneg)  (mpfi_srcptr)
    int    (*mpfi_is_neg)     (mpfi_srcptr)
    int    (*mpfi_is_nonpos)  (mpfi_srcptr)
    int    (*mpfi_is_zero)    (mpfi_srcptr)
    int    (*mpfi_is_strictly_pos) (mpfi_srcptr)
    int    (*mpfi_is_strictly_neg) (mpfi_srcptr)
    
    # default comparison functions 
    int    mpfi_is_pos_default          (mpfi_srcptr)
    int    mpfi_is_nonneg_default       (mpfi_srcptr)
    int    mpfi_is_neg_default          (mpfi_srcptr)
    int    mpfi_is_nonpos_default       (mpfi_srcptr)
    int    mpfi_is_zero_default         (mpfi_srcptr)
    int    mpfi_is_strictly_neg_default (mpfi_srcptr a)
    int    mpfi_is_strictly_pos_default (mpfi_srcptr a)
    
    int    mpfi_cmp_default      (mpfi_srcptr,mpfi_srcptr)
    int    mpfi_cmp_d_default    (mpfi_srcptr,double)
    int    mpfi_cmp_ui_default   (mpfi_srcptr,unsigned long)
    int    mpfi_cmp_si_default   (mpfi_srcptr,long)
    int    mpfi_cmp_z_default    (mpfi_srcptr,mpz_srcptr)
    int    mpfi_cmp_q_default    (mpfi_srcptr,mpq_srcptr)
    int    mpfi_cmp_fr_default (mpfi_srcptr,mpfr_srcptr)
    
    
    int mpfi_has_zero (mpfi_srcptr)
    
    int mpfi_nan_p (mpfi_srcptr)
    int mpfi_inf_p (mpfi_srcptr)
    int mpfi_bounded_p (mpfi_srcptr)
    
    # Interval manipulation 
    
    # operations related to the internal representation by endpoints 
    
    # get left or right bound of the interval defined by the second argument and put the result in the first one 
    int   mpfi_get_left   (mpfr_ptr,mpfi_srcptr)
    int   mpfi_get_right  (mpfr_ptr,mpfi_srcptr)
    
    int   mpfi_revert_if_needed  (mpfi_ptr)
    
    # Set operations on intervals 
    # "Convex hulls" 
    # extends the interval defined by the first argument so that it contains the second one 
    
    int   mpfi_put        (mpfi_ptr,mpfi_srcptr)
    int   mpfi_put_d      (mpfi_ptr,double)
    int   mpfi_put_si     (mpfi_ptr,long)
    int   mpfi_put_ui     (mpfi_ptr,unsigned long)
    int   mpfi_put_z      (mpfi_ptr,mpz_srcptr)
    int   mpfi_put_q      (mpfi_ptr,mpq_srcptr)
    int   mpfi_put_fr     (mpfi_ptr,mpfr_srcptr)
    
    # builds an interval whose left bound is the lower (round -infty) than the second argument and the right bound is greater (round +infty) than the third one 
    
    int   mpfi_interv_d   (mpfi_ptr,double,double)
    int   mpfi_interv_si  (mpfi_ptr,long,long)
    int   mpfi_interv_ui  (mpfi_ptr,unsigned long,unsigned long)
    int   mpfi_interv_z   (mpfi_ptr,mpz_srcptr,mpz_srcptr)
    int   mpfi_interv_q   (mpfi_ptr,mpq_srcptr,mpq_srcptr)
    int   mpfi_interv_fr  (mpfi_ptr,mpfr_srcptr,mpfr_srcptr)
    
    # Inclusion tests 
    # tests if the first argument is inside the interval defined by the second one 
    int   mpfi_is_strictly_inside   (mpfi_srcptr,mpfi_srcptr)
    int   mpfi_is_inside        	(mpfi_srcptr, mpfi_srcptr)
    int   mpfi_is_inside_d      	(double, mpfi_srcptr)
    int   mpfi_is_inside_ui     	(unsigned long, mpfi_srcptr)
    int   mpfi_is_inside_si     	(long, mpfi_srcptr)
    int   mpfi_is_inside_z      	(mpz_srcptr,mpfi_srcptr)
    int   mpfi_is_inside_q      	(mpq_srcptr,mpfi_srcptr)
    int   mpfi_is_inside_fr   	(mpfr_srcptr,mpfi_srcptr)
    
    # set operations 
    int   mpfi_is_empty         (mpfi_srcptr)
    int   mpfi_intersect        (mpfi_ptr, mpfi_srcptr, mpfi_srcptr)
    int   mpfi_union            (mpfi_ptr, mpfi_srcptr, mpfi_srcptr)
    
    # complement... : to do later 
    
    
    # Miscellaneous 
    
    # adds the second argument to the right bound of the first one and subtracts the second argument to the left bound of the first one 
    int  mpfi_increase         (mpfi_ptr,mpfr_srcptr)
    # keeps the same center and multiply the radius by 2*(1+fact) 
    int mpfi_blow(mpfi_ptr, mpfi_srcptr, double)
    # splits the interval into 2 halves 
    int mpfi_bisect(mpfi_ptr, mpfi_ptr, mpfi_srcptr)
    
    char * mpfi_get_version()
    
    # Error handling 
    
    void   mpfi_reset_error()
    void   mpfi_set_error(int)
    int    mpfi_is_error()
    
    #define MPFI_FLAGS_BOTH_ENDPOINTS_EXACT       0
    #define MPFI_FLAGS_LEFT_ENDPOINT_INEXACT      1
    #define MPFI_FLAGS_RIGHT_ENDPOINT_INEXACT     2
    #define MPFI_FLAGS_BOTH_ENDPOINTS_INEXACT     3
    
    #define MPFI_BOTH_ARE_EXACT(x) ( (int)(x) == 0 )
    #define MPFI_LEFT_IS_INEXACT(x) ( (int)(x)%2 )
    #define MPFI_RIGHT_IS_INEXACT(x) ( (int)(x)/2 )
    #define MPFI_BOTH_ARE_INEXACT(x) ( (int)(x) == 3 )
    
    #define MPFI_REVERT_INEXACT_FLAGS(x) ( ((x)==1) ? 2 : ((x)==2) ? 1 : x )
    
    #define MPFI_NAN_P(a) ( MPFR_IS_NAN(&(a->left)) || MPFR_IS_NAN (&(a->right)) )
    #define MPFI_INF_P(a) ( MPFR_IS_INF(&(a->left)) || MPFR_IS_INF (&(a->right)) )
    #define MPFI_IS_ZERO(a)  (MPFI_NAN_P(a) ? 0 : ((MPFR_SIGN(&(a->right))==0) && (MPFR_SIGN(&(a->left))==0)))
    
    #define MPFI_CLEAR(m) {mpfr_clear(&(m->right)); mpfr_clear(&(m->left));}

import_gmpy()

sizeof_mpfi = sizeof(mpfi_t)

def mpf_set_default_prec(prec):
    __c_mpf_set_default_prec(prec)

cdef set_mpf( mpf_t _x, x ):
    " set _x from x, steals a ref "
    assert Pympf_Check(x)
    mpf_set( _x, (<PympfObject*>x)[0].f )

cdef object mpf2py( mpf_t x ):
    " new ref "
    cdef object _x
    cdef int bits
    bits = mpf_get_prec( x )
    _x = Pympf_new( bits )
    mpf_set( (<PympfObject*>_x)[0].f, x )
    return <object>_x

cdef object mpfr2py( mpfr_t x, mpfr_rnd_t rnd ):
    " new ref "
    cdef object _x
    cdef int bits
    bits = mpfr_get_prec( x )
    _x = Pympf_new( bits )
    mpfr_get_f( (<PympfObject*>_x)[0].f, x, rnd )
    return <object>_x

import gmpy
from gmpy import mpf

cdef object mpf_type
mpf_type = type(mpf(1.0))

cdef class Interval

cdef object c_promote(x):
    if isinstance(x,Interval):
        pass
    elif hasattr(x,"__float__") or Pympf_Check(x):
        x = Interval(x)
    else:
        x = None
    return x

def promote(x):
    if isinstance(x,Interval):
        return x
    if hasattr(x,"__float__") or Pympf_Check(x):
        return Interval(x)
    return None

def set_default_prec(prec):
    mpfr_set_default_prec(prec)
def get_default_prec():
    return mpfr_get_default_prec()

class DisorderException(Exception):
    pass

cdef class Interval:
    cdef mpfi_t x
    def __init__( self, lower=None, upper=None ):
        cdef Interval _lower
        cdef mpfr_t fr_lower
        cdef mpfr_t fr_upper
        cdef PympfObject *pympf_lower
        cdef PympfObject *pympf_upper

        if isinstance(lower, Interval):
            _lower = lower
            mpfi_init_set( self.x, _lower.x )
            assert upper is None, "but first arg is already an Interval ?!?!"
        else:
            if hasattr(lower,"__float__"):
                mpfi_init_set_d( self.x, lower )
            elif Pympf_Check(lower):
                pympf_lower = <PympfObject*>lower
                mpfr_init(fr_lower)
                mpfr_set_f(fr_lower,pympf_lower[0].f,GMP_RNDD)
                mpfi_init_set_fr( self.x, fr_lower )
                mpfr_clear(fr_lower)
            elif lower is None:
                mpfi_init( self.x )
                assert upper is None
            else:
                mpfi_init( self.x )
                raise TypeError, "what's this: %s"%repr(lower)
            if hasattr(upper,"__float__"):
                mpfi_put_d( self.x, upper )
            elif Pympf_Check(upper):
                pympf_upper = <PympfObject*>upper
                mpfr_init(fr_upper)
                mpfr_set_f(fr_upper,pympf_upper[0].f,GMP_RNDU)
                mpfi_put_fr( self.x, fr_upper )
                mpfr_clear(fr_upper)
            elif upper is not None:
                mpfi_init( self.x )
                raise TypeError, "what's this: %s"%upper
        assert (lower is None and upper is None) or not mpfi_is_empty( self.x ),\
            (self.lower.digits(),self.upper.digits(),lower,upper)
    def __dealloc__( self ):
        mpfi_clear( self.x )
    def get_addr( self ):
        cdef long addr
        addr = <long>self.x
        return addr

    property lower:
        def __get__( self ):
            cdef mpfr_t fr_lower
            mpfr_init( fr_lower )
            mpfi_get_left( fr_lower, self.x )
            lower = mpfr2py( fr_lower, GMP_RNDD )
            mpfr_clear( fr_lower )
            return lower
    property upper:
        def __get__( self ):
            cdef mpfr_t fr_upper
            mpfr_init( fr_upper )
            mpfi_get_right( fr_upper, self.x )
            upper = mpfr2py( fr_upper, GMP_RNDU )
            mpfr_clear( fr_upper )
            return upper
    property prec:
        def __get__( self ):
            return mpfi_get_prec( self.x )
        def __set__( self, prec ):
            mpfi_round_prec( self.x, prec )

    def __repr__( self ):
        return self.to_string()
#        return "Interval(%s,%s)" % (self.lower, self.upper)
    def __str__( self ):
#        return "Interval(%.6f,%.6f)" % (self.lower, self.upper)
        return "[%.9f,%.9f]" % (self.lower, self.upper)
    def to_string( self ):
        # char * mpfr_get_str (char *str, mp_exp_t *expptr, int b, size_t n, mpfr_t op, mp_rnd_t rnd)
        cdef char *_s_lower, *_s_upper
        cdef mp_exp_t exp
        cdef mpfr_t fr_lower, fr_upper

        mpfr_init( fr_lower )
        mpfi_get_left( fr_lower, self.x )
        mpfr_init( fr_upper )
        mpfi_get_right( fr_upper, self.x )

        _s_lower = mpfr_get_str(NULL, &exp, 10, 0, fr_lower, GMP_RNDD )
        s_lower = _s_lower
        if s_lower is None:
            raise Exception
        if s_lower[0]=='-':
            sl = s_lower[:2]+'.'+s_lower[2:]+'e'+str(exp-1)
        else:
            sl = s_lower[:1]+'.'+s_lower[1:]+'e'+str(exp-1)

        _s_upper = mpfr_get_str(NULL, &exp, 10, 0, fr_upper, GMP_RNDD )
        s_upper = _s_upper
        if s_upper is None:
            raise Exception
        if s_upper[0]=='-':
            su = s_upper[:2]+'.'+s_upper[2:]+'e'+str(exp-1)
        else:
            su = s_upper[:1]+'.'+s_upper[1:]+'e'+str(exp-1)

        mpfr_free_str(_s_lower)
        mpfr_free_str(_s_upper)
        mpfr_clear( fr_lower )
        mpfr_clear( fr_upper )
        return "Interval(mpf('%s'), mpf('%s'))" % (sl, su)
    def __hash__( self ):
        return hash(self.to_string())
